# Prattle

./: .gitignore  Cargo.toml  Making a Pratt Parser Generator.md  README.md  notes.md
examples/: Grammar.txt
resources/: operators.csv
src/: ast.rs  builtins.rs  errors.rs  evaluator.rs  interpreter.rs  lexer.rs  main.rs  operator.rs  parser.rs  symbol_table.rs
src/syntax/: grammar.rs  mod.rs  syntax.rs
