[package]
name = "prattle"
version = "0.1.0"
authors = ["Robert Jacobson <rljacobson@gmail.com>"]
edition = "2018"

[dependencies]
nom = "5.0.0"
itertools = "0.8.0"

[target.'cfg(any(windows, unix))']
rustflags = ["-C target-cpu=native"]

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = 3
