[package]
name = "prattle"
version = "0.1.0"
authors = ["Robert Jacobson <rljacobson@gmail.com>"]
edition = "2021"

[dependencies]
#nom = "5.0.0"          # For parsing the DSL
itertools = "0.13"    # Used in parsing the DSL

#[target.'cfg(any(windows, unix))']
#rustflags = ["-C target-cpu=native"]

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = 3
